--- a/OpenGLCourse/CMakeLists.txt
+++ b/OpenGLCourse/CMakeLists.txt
@@ -29,5 +29,6 @@ target_link_libraries(${PROJECT_NAME} ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${GLM_
 
 
 file(COPY "${PROJECT_SOURCE_DIR}/Shaders" DESTINATION "${PROJECT_BINARY_DIR}")
+file(COPY "${PROJECT_SOURCE_DIR}/Texture" DESTINATION "${PROJECT_BINARY_DIR}")
 
 
